Change overall color to dark theme

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@188&display=swap" rel="stylesheet">
 </head>
-<body>
+<body style="overflow: hidden; box-sizing: border-box" >
   <div id='root'>
     <script src="./../dist/bundle.js"></script>
   </div>
 </body>
-</html>
+</html>starticle
