Add my app router

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body style="overflow: hidden; box-sizing: border-box" >
   <div id='root'>
-    <script src="./../dist/bundle.js"></script>
+    <script src="./bundle.js"></script>
   </div>
 </body>
 </html>starticle
